# hytra

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  Readme.txt  appveyor.yml  circle.yml  compare_json_hypotheses_graphs.py  create_docs.sh  ctc_gt_to_hdf5.py  error_visualisation.py  h5_to_gt.py  hdf5_to_ctc.py  hdf_gt_to_tif.py  hypotheses_graph_to_json.py  index.html  json_result_to_events.py  json_result_to_labelimage.py  multitrack_sliding_window.py  pipeline.py  run_merger_resolving.py  segmentation_to_hdf5.py  setup.py  sporo_data_preparation.py  stack_to_h5.py  train_transition_classifier.py  txt_featurenames_to_classifierhdf5.py
.circleci/: config.yml
conda-recipe/: conda_build_config.yaml  meta.yaml
cvpr15_eval/: compute_reranker_scores.py  compute_tra_loss.py  compute_track_scores.py  extract_per_track_feature_vectors.py  plot_feature_importance.py  plot_fmeasuer_vs_proposal.py  plot_loss_intra_vs_gt.py  plot_score_vs_loss.py  plot_score_vs_ocsvm.py  plot_score_vs_precision.py
dev/: environment-dev.yaml
empryonic/: analysis.py  conversion.py  conversion_test.py  convertToTiff.py  dotLineageTree.py  elab.py  events.py  filter.py  hdf5io.py  io.py  plot.py  run_tests  segment.py  toTiffStack.m  track.py  tracklets.py  training.py  trainingcore.py  traininggui.py  visCell.py
feature_extraction/: CMakeLists.txt
feature_extraction/config/: job_tmpl  run_job_tmpl.sh
feature_extraction/examples/: CMakeLists.txt  extractor.cxx  extractor_helics.cxx  extractor_one.cxx  staty.cxx
feature_extraction/include/: ArgParser.h  ConfigFeatures.hxx  ConfigMpi.hxx  MpiMasterSlave.hxx  SGFeatures.hxx  config.hxx  dFeatureExtractor.hxx  interfaces.hxx  readSuperVoxels.hxx  segmentationLabeling.hxx  supervoxelFeatures.hxx
feature_extraction/matlab/: create_artificial_data.m  writeContiguousHDF5.m
feature_extraction/src/: ArgParser.cpp  CMakeLists.txt  MpiMasterSlave.cxx  dFeatureExtractor.cxx  interfaces.cxx  readSuperVoxels.cxx  segmentationLabeling.cxx  supervoxelFeatures.cxx
feature_extraction/tests/: CMakeLists.txt  testFeatureExtractor.cxx  testSegmentationLabeling.cxx  testSuperVoxels.cxx
hdf5_spec_generation/: generateFileFormatSpecs.py  hdf5_spec_v1.1.ini
hytra/: __init__.py  batch_quantify  commands_drosophila.sh  commands_rapoport.sh  extract_spacetime  h5files_to_onefile  index.html  joint_tracking_evaluation  multitrack_ilastik10  multitrack_ilastik10.py  new2old_result  trainingtool
object_features/: objectFeatures.cxx  pythonwrapper.cpp  test.cxx
python_wrapper/: CMakeLists.txt
python_wrapper/segmentation/: pySegmentation.cxx
scripts/: compare_json_hypotheses_graphs.py  compare_tracking.py  convexify_costs.py  create_label_image_from_raw.py  error_visualisation.py  evaluate_object_count_classifier.py  events_to_json_gt.py  extract_timings_and_energies.py  extract_transition_cnn_training_samples.py  h5_to_gt.py  hdf_gt_to_tif.py  hypotheses_graph_to_json.py  json_result_to_events.py  json_result_to_labelimage.py  multitrack_sliding_window.py  pipeline.py  pipelineNoScripts.py  pipeline_skip_links.py  plot_probability_distribs.py  replicate_graph.py  run_gap_closing.py  run_merger_resolving.py  segmentation_to_labelimage.py  split_track_stitch.py  sporo_data_preparation.py  track_conflicting_seg_hypotheses.py  tracking_ilp_to_weights.py  train_object_count_classifier.py  train_transition_classifier.py  txt_featurenames_to_classifierhdf5.py  wrong_edges_visualisation.py
segmentation/: CMakeLists.txt  run_hoeckendorf-htr24.sh  run_segmentation_block_processor.sh  run_segmentation_single.sh
segmentation/apps/: segmentation.cxx  segmentation_block.cxx  segmentation_block_processor.cxx  segmentation_single.cxx
segmentation/scripts/: ct-keller-vegetal_segmentation_msa_0000-0200.ini  ct-keller-vegetal_segmentation_test_200x200x100.ini  hoeckendorf-htr24_0000-0099.ini  keller_animal_0000-0029.ini  keller_animal_0000-0029.sh  keller_animal_0000-0029_msa.ini  keller_animal_0000-0029_msa.sh  keller_animal_0030-0074.ini  keller_animal_0030-0074.sh  keller_animal_0030-0074_msa.ini  keller_animal_0030-0074_msa.sh  keller_animal_0030-0099_msa.sh  keller_animal_0075-0099.ini  keller_animal_0075-0099.sh  keller_animal_0075-0099_msa.ini  keller_animal_0075-0099_msa.sh  keller_animal_T=0000-0050.ini  keller_animal_T=0050-0099.ini  keller_animal_T=0070-0100.ini  sigma=2.4.ini  sigma=3.6.ini  test_segmentation_block_processing.ini  test_segmentation_block_processing_0000.ini  test_segmentation_block_processing_0024.ini  test_segmentation_block_processing_0029.ini  test_segmentation_block_processing_0049.ini  test_segmentation_block_processing_0075.ini  test_segmentation_block_processing_0099.ini  test_segmentation_single.ini
segmentation/src/: ArgParser.hxx  HDF5ReaderWriter.hxx  Log.hxx  MatReaderWriter.hxx  SimpleIni.h  ctAutomatedVoxelClassification.hxx  ctBlockProcessor.hxx  ctBlockProcessorThread.hxx  ctBoundaryCueGenerator.hxx  ctClassifierTrainer.hxx  ctFeatureExtractor.hxx  ctGVFGenerator.hxx  ctIniConfiguration.hxx  ctPreProcessor.hxx  ctProbabilityMapPredictor.hxx  ctSegmentation.hxx  ctSegmentationGC.hxx  ctSegmentationMSA.hxx  ctSegmentationRoutine.hxx  ctSegmentationSeededWatershed.hxx  ctSizeFilter.hxx  eigensystem.hxx  graphcut.hxx  hdf5impex.hxx  vigraAlgorithmPackage.hxx  vigraFunctionDistanceTransform.hxx
segmentation_ilastik/: compare_tracking  demuxtiffs.sh  il2ebr.py  interpolate_ilastik_prediction.py  libdetection.py  normalize8bit.ijm  object_detection.py  random.lut  run-object_detection.sh  seg2hdf5_4D.py  stack2ilastik.py  stack2ilastik4D.py  stacks2ilastik.py  to_tiff_stack  vistracking.py  vistracking_3D.py
tests/: test_pipeline.py  test_skipLinks.py
toolbox/: __init__.py  cellness_tracking  commands_drosophila.sh  commands_rapoport.sh  compare_json_hypotheses_graphs.m.html  compare_json_hypotheses_graphs.py  compare_tracking  compare_tracking.py  compare_tracking_unaries  compute_reranker_scores.py  compute_tra_loss.py  config_template_ctc.ini  convexify_costs.m.html  convexify_costs.py  create_config.py  ctc_gt_to_hdf5.py  (+66 more)
(+218 files in other folders)
